kubernetes-masterclass-beginners/deployments/nginx-storage.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2025-05-26T02:37:12Z"
  labels:
    run: nginx-storage
  name: nginx-storage
  namespace: default
spec:
  containers:
  - image: nginx
    name: nginx-storage
    volumeMounts:
    - mountPath: /scratch
      name: scratch-volume
  - image: busybox
    name: busybox
    command: ["/bin/sh", "-c"]
    args: ["sleep 1000"]
    volumeMounts:
    - mountPath: /scratch
      name: scratch-volume
  volumes:
  - name: scratch-volume
    emptyDir:
      sizeLimit: 500Mi
