kubernetes-masterclass-beginners/deployments/testdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: testdeply
  name: testdeply
spec:
  replicas: 10
  selector:
    matchLabels:
      app: testdeply
  template:
    metadata:
      labels:
        app: testdeply
    spec:
      containers:
      - image: httpd:alpine3.18
        name: httpd
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
